# geoassert

./: .gitignore  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: geoassert.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  check_request.yml  config.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
changelog/: index.html
checks/: index.html
ci/: index.html
cli/: index.html
contracts/: buildings.yml  example_buildings.yml  index.html
demo/: demo 2.tape
docs/: changelog.md  checks.md  ci.md  cli.md  contracts.md  engines.md  index.md  python-api.md  quickstart.md
engines/: index.html
examples/: buildings.parquet
python-api/: index.html
quickstart/: index.html
scripts/: make_demo_data 2.py  make_demo_data.py
search/: search_index.json
src/geoassert/: __init__.py  cli.py  exceptions.py  result.py  runner.py
src/geoassert/checks/: __init__.py  attributes.py  base.py  bounds.py  crs.py  geometry.py  geoparquet.py  partitions.py
src/geoassert/contracts/: __init__.py  loader.py  schema.py
src/geoassert/engines/: __init__.py  bigquery.py  duckdb.py  geopandas.py  postgis.py  pyarrow.py  shapely.py  snowflake.py
src/geoassert/integrations/: dbt.py
src/geoassert/profiling/: __init__.py  profiler.py
src/geoassert/reports/: __init__.py  github.py  html.py  json.py  junit.py  markdown.py
tests/: conftest.py  test_cli.py  test_result.py
tests/test_checks/: test_attributes.py  test_bbox_consistency.py  test_bounds.py  test_crs.py  test_crs_semantics.py  test_geometry.py  test_geometry_semantics.py  test_geoparquet.py
tests/test_contracts/: test_loader.py
tests/test_engines/: test_duckdb_engine.py  test_validate_source.py
tests/test_integrations/: test_dbt.py
tests/test_reports/: test_html_report.py
tests/test_v02/: test_reports.py  test_sampling.py  test_schema_validation.py  test_severity.py
tests/test_v03/: test_cloud_path.py  test_directory_validation.py  test_duckdb_dispatch.py  test_partitions.py  test_row_group_stats.py
tests/test_v04/: test_warehouse_engines.py
tests/test_v06/: test_geometry_semantics.py
