[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoassert"
version = "0.3.0"
description = "Data contracts for geospatial pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Marten Reichow", email = "marten123@live.de" }]
keywords = ["geospatial", "geoparquet", "data-validation", "data-contracts", "cli", "etl", "data-quality", "gis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
shapely  = ["shapely>=2.0"]
geopandas = ["geopandas>=0.14", "shapely>=2.0"]
duckdb  = ["duckdb>=0.10"]
polars  = ["polars>=0.20"]
dbt     = []
all = [
    "shapely>=2.0",
    "geopandas>=0.14",
    "duckdb>=0.10",
    "polars>=0.20",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "types-pyyaml",
    "shapely>=2.0",
    "geopandas>=0.14",
    "duckdb>=0.10",
]

[project.scripts]
geoassert = "geoassert.cli:app"

[project.urls]
Homepage      = "https://morphenr.github.io/geoassert"
Documentation = "https://morphenr.github.io/geoassert"
Repository    = "https://github.com/Morphenr/geoassert"
Issues        = "https://github.com/Morphenr/geoassert/issues"
Changelog     = "https://github.com/Morphenr/geoassert/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/geoassert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = ["-v", "--cov=geoassert", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["geoassert"]

[tool.ruff]
line-length    = 100
target-version = "py310"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TC003", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["geoassert"]

[tool.mypy]
python_version      = "3.10"
strict              = true
ignore_missing_imports = true
files               = ["src/geoassert"]
